--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   readmore: ^3.0.0
+  mongo_dart: ^0.10.4
 
 dev_dependencies:
   flutter_test:
