--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   readmore: ^3.0.0
   mongo_dart: ^0.10.4
   json_annotation: ^4.9.0
+  http: ^1.3.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
