--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.9.0
   http: ^1.3.0
   fluttertoast: ^8.2.12
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
